==> ARMmbed/mbed-os/targets/TARGET_TI/TARGET_CC32XX/TARGET_CC3220SF/spi_api.c <==
#include <stdlib.h>
#include "hal/spi_api.h"
#include "objects.h"
#include "ti/devices/cc32xx/inc/hw_ints.h"
#include "ti/devices/cc32xx/inc/hw_memmap.h"
#include "ti/devices/cc32xx/inc/hw_types.h"
#include "ti/devices/cc32xx/driverlib/pin.h"
#include "ti/devices/cc32xx/driverlib/rom_map.h"
#include "ti/devices/cc32xx/driverlib/ti_spi_driverlib.h"
#include "ti/devices/cc32xx/driverlib/prcm.h"
#include "PeripheralPins.h"
#define PIN_MODE_SPI 7
#define SPI_WL_MASK  0xF80

static void spi_configure_driver_instance(spi_t *obj)
{
#if DEVICE_SPI_ASYNCH
    struct spi_s *spi_inst = &obj->spi;
#else
    struct spi_s *spi_inst = obj;
#endif

    if (spi_inst->clock_update) {
        SPIReset(spi_inst->baseAddr);
        SPIConfigSetExpClk(spi_inst->baseAddr, spi_inst->clock_config.ulSPIClk,
                           spi_inst->clock_config.ulBitRate, spi_inst->clock_config.ulMode,
                           spi_inst->clock_config.ulSubMode, spi_inst->clock_config.ulConfig);
        spi_inst->clock_update = false;
        SPIEnable(spi_inst->baseAddr);
    }
}

void spi_init(spi_t *obj, PinName mosi, PinName miso, PinName sclk, PinName ssel)
{
#if DEVICE_SPI_ASYNCH
    struct spi_s *spi_inst = &obj->spi;
#else
    struct spi_s *spi_inst = obj;
#endif

    /* Get instance based on requested pins. */
    spi_inst->instance = 1;
    spi_inst->baseAddr = GSPI_BASE;
    spi_inst->clock_config.ulConfig = SPI_4PIN_MODE;
    spi_inst->clock_config.ulConfig |= SPI_HW_CTRL_CS;
    spi_inst->clock_config.ulConfig |= SPI_CS_ACTIVELOW;
    if (ssel == NC) {
        spi_inst->cs_control_gpio = true;
    } else {
        spi_inst->cs_control_gpio = false;
    }
    spi_inst->clock_config.ulConfig |= SPI_TURBO_OFF;
#if DEVICE_SPI_ASYNCH
    /* Set default values for asynchronous variables. */
    spi_inst->handler = 0;
    spi_inst->mask = 0;
    spi_inst->event = 0;
#endif

    /* Configure GPIO pin if chip select has been set. */
    MAP_PinTypeSPI((unsigned long) mosi & 0xff, (unsigned long) PIN_MODE_SPI);
    MAP_PinTypeSPI((unsigned long) miso & 0xff, (unsigned long) PIN_MODE_SPI);
    MAP_PinTypeSPI((unsigned long) sclk & 0xff, (unsigned long) PIN_MODE_SPI);
    if (ssel != NC) {
        MAP_PinTypeSPI((unsigned long) ssel & 0xff, (unsigned long) PIN_MODE_SPI);
    }
    spi_inst->clock_update = true;
}

void spi_format(spi_t *obj, int bits, int mode, int slave)
{
    /* SPI module supports 8/16/32 bit transfers. */
    MBED_ASSERT(bits == 8 || bits == 16 || bits == 32);
    /* SPI module doesn't support Mbed HAL Slave API. */
    MBED_ASSERT(slave == 0);

#if DEVICE_SPI_ASYNCH
    struct spi_s *spi_inst = &obj->spi;
#else
    struct spi_s *spi_inst = obj;
#endif
    if ((uint32_t)bits != spi_inst->word_length) {
        spi_inst->word_length = bits;
        spi_inst->clock_update = true;
    }
    spi_inst->clock_config.ulConfig &= ~SPI_WL_MASK;
    spi_inst->clock_config.ulConfig |= (bits - 1) << 7;
    spi_inst->clock_config.ulMode = SPI_MODE_MASTER;

    // TI calls it submode
    // SPI_SUB_MODE_0 - clk active high, sampling on the rising edge
    // SPI_SUB_MODE_1 - clk active high, sampling on the falling edge
    // SPI_SUB_MODE_2 - clk active low, sampling on the falling edge
    // SPI_SUB_MODE_3 - clk active low, sampling on the rising edge

    /* Convert Mbed HAL mode to TI mode. */

    if (mode == 0) {
        if (spi_inst->clock_config.ulSubMode != SPI_SUB_MODE_0) {
            spi_inst->clock_update = true;
        }
        spi_inst->clock_config.ulSubMode = SPI_SUB_MODE_0;
    } else if (mode == 1) {
        if (spi_inst->clock_config.ulSubMode != SPI_SUB_MODE_1) {
            spi_inst->clock_update = true;
        }
        spi_inst->clock_config.ulSubMode = SPI_SUB_MODE_1;
    } else if (mode == 2) {
        if (spi_inst->clock_config.ulSubMode != SPI_SUB_MODE_2) {
            spi_inst->clock_update = true;
        }
        spi_inst->clock_config.ulSubMode = SPI_SUB_MODE_2;
    } else if (mode == 3) {
        if (spi_inst->clock_config.ulSubMode != SPI_SUB_MODE_3) {
            spi_inst->clock_update = true;
        }
        spi_inst->clock_config.ulSubMode = SPI_SUB_MODE_3;
    }
    spi_configure_driver_instance(spi_inst);
}

void spi_frequency(spi_t *obj, int hz)
{
#if DEVICE_SPI_ASYNCH
    struct spi_s *spi_inst = &obj->spi;
#else
    struct spi_s *spi_inst = obj;
#endif

    spi_inst->clock_config.ulSPIClk = PRCMPeripheralClockGet(PRCM_GSPI);
    if (spi_inst->clock_config.ulBitRate != (uint32_t)hz) {
        spi_inst->clock_update = true;
        spi_inst->clock_config.ulBitRate = hz;
    }
    spi_configure_driver_instance(spi_inst);
}

int spi_master_write(spi_t *obj, int value)
{
#if DEVICE_SPI_ASYNCH
    struct spi_s *spi_inst = &obj->spi;
#else
    struct spi_s *spi_inst = obj;
#endif

    uint32_t data_read = 0;

    /* Configure peripheral if necessary. */
    spi_configure_driver_instance(obj);

    if (!spi_inst->cs_control_gpio) {
        SPICSEnable(spi_inst->baseAddr);
    }
    /* Transfer a data word. */
    SPIDataPut(spi_inst->baseAddr, value);
    SPIDataGet(spi_inst->baseAddr, (unsigned long *)&data_read);
    if (!spi_inst->cs_control_gpio) {
        SPICSDisable(spi_inst->baseAddr);
    }
    return data_read & ((1 << spi_inst->word_length) - 1);
}

int spi_master_block_write(spi_t *obj, const char *tx_buffer, int tx_length, char *rx_buffer, int rx_length, char write_fill)
{
#if DEVICE_SPI_ASYNCH
    struct spi_s *spi_inst = &obj->spi;
#else
    struct spi_s *spi_inst = obj;
#endif

    int i, spi_words = 0, cs_flags = 0;;

    /* Configure peripheral if necessary. */
    spi_configure_driver_instance(obj);

    if (tx_length >= rx_length) {
        if (spi_inst->word_length == 16) {
            spi_words = (tx_length >> 1);
        } else if (spi_inst->word_length == 32) {
            spi_words = (tx_length >> 2);
        } else if (spi_inst->word_length == 8) {
            spi_words = tx_length;
        }

        unsigned char *rx_temp = malloc(tx_length);
        SPITransfer(spi_inst->baseAddr, (unsigned char *)tx_buffer,
                    (unsigned char *)rx_temp, (unsigned long) spi_words,
                    SPI_CS_ENABLE | SPI_CS_DISABLE);
        // Copy the desired data from temp_rx
        for (i = 0; i < rx_length; i ++) {
            rx_buffer[i] = rx_temp[i];
        }
        free(rx_temp);
        return (tx_length);
    } else // tx_length < rx_length
        // Copy the data from tx_buffer to a temp buffer and fill the the rest of the tx_buffer with write_fill)
    {
        if (spi_inst->word_length == 16) {
            spi_words = (rx_length >> 1);
        } else if (spi_inst->word_length == 32) {
            spi_words = (rx_length >> 2);
        } else if (spi_inst->word_length == 8) {
            spi_words = rx_length;
        }

        unsigned char *tx_temp = malloc(rx_length);
        for (i = 0; i < tx_length; i ++) {
            tx_temp[i] = tx_buffer[i];
        }
        for (i = tx_length; i < rx_length; i ++) {
            tx_temp[i] = write_fill;
        }
        if (!spi_inst->cs_control_gpio) {
            cs_flags = SPI_CS_ENABLE | SPI_CS_DISABLE;
        }
        SPITransfer(spi_inst->baseAddr, (unsigned char *)tx_temp,
                    (unsigned char *)rx_buffer, (unsigned long) spi_words,
                    cs_flags);
        free(tx_temp);
        return rx_length;
    }

}
