==> ARMmbed/mbed-os/targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_NRF52/spi_api.c <==
#include "hal/spi_api.h"
#include "object_owners.h"
#include "pinmap_ex.h"
#include "nrf_drv_spi.h"

static void spi_configure_driver_instance(spi_t *obj)
{
#if DEVICE_SPI_ASYNCH
    struct spi_s *spi_inst = &obj->spi;
#else
    struct spi_s *spi_inst = obj;
#endif

    int instance = spi_inst->instance;

    /* Get pointer to object of the current owner of the peripheral. */
    void *current_owner = object_owner_spi2c_get(instance);

    /* Check if reconfiguration is actually necessary. */
    if ((obj != current_owner) || spi_inst->update) {

        /* Update applied, reset flag. */
        spi_inst->update = false;

        /* Clean up and uninitialize peripheral if already initialized. */
        if (nordic_nrf5_spi_initialized[instance]) {
            nrf_drv_spi_uninit(&nordic_nrf5_spi_instance[instance]);
        }

#if DEVICE_SPI_ASYNCH
        /* Set callback handler in asynchronous mode. */
        if (spi_inst->handler) {
            nrf_drv_spi_init(&nordic_nrf5_spi_instance[instance], &(spi_inst->config), nordic_nrf5_spi_event_handler, obj);
        } else {
            nrf_drv_spi_init(&nordic_nrf5_spi_instance[instance], &(spi_inst->config), NULL, NULL);
        }
#else
        /* Set callback handler to NULL in synchronous mode. */
        nrf_drv_spi_init(&nordic_nrf5_spi_instance[instance], &(spi_inst->config), NULL, NULL);
#endif

        /* Mark instance as initialized. */
        nordic_nrf5_spi_initialized[instance] = true;

        /* Claim ownership of peripheral. */
        object_owner_spi2c_set(instance, obj);
    }
}

void spi_init(spi_t *obj, PinName mosi, PinName miso, PinName sclk, PinName ssel)
{
#if DEVICE_SPI_ASYNCH
    struct spi_s *spi_inst = &obj->spi;
#else
    struct spi_s *spi_inst = obj;
#endif

    /* Get instance based on requested pins. */
    spi_inst->instance = pin_instance_spi(mosi, miso, sclk);
    MBED_ASSERT(spi_inst->instance < ENABLED_SPI_COUNT);

    /* Store chip select separately for manual enabling. */
    spi_inst->cs = ssel;

    /* Store pins except chip select. */
    spi_inst->config.sck_pin        = sclk;
    spi_inst->config.mosi_pin       = mosi;
    spi_inst->config.miso_pin       = miso;
    spi_inst->config.ss_pin         = NRF_DRV_SPI_PIN_NOT_USED;

    /* Use the default config. */
    spi_inst->config.irq_priority   = SPI_DEFAULT_CONFIG_IRQ_PRIORITY;
    spi_inst->config.orc            = SPI_FILL_CHAR;
    spi_inst->config.frequency      = NRF_DRV_SPI_FREQ_1M;
    spi_inst->config.mode           = NRF_DRV_SPI_MODE_0;
    spi_inst->config.bit_order      = NRF_DRV_SPI_BIT_ORDER_MSB_FIRST;

#if DEVICE_SPI_ASYNCH
    /* Set default values for asynchronous variables. */
    spi_inst->handler = 0;
    spi_inst->mask = 0;
    spi_inst->event = 0;
#endif

    /* Configure peripheral. This is called on each init to ensure all pins are set correctly
     * according to the SPI mode before calling CS for the first time.
     */
    spi_configure_driver_instance(obj);

    /* Configure GPIO pin if chip select has been set. */
    if (ssel != NC) {
        nrf_gpio_pin_set(ssel);
        nrf_gpio_cfg_output(ssel);
    }

    static bool first_init = true;

    if (first_init) {
        first_init = false;

        /* Register interrupt handlers in driver with the NVIC. */
        NVIC_SetVector(SPIM0_SPIS0_TWIM0_TWIS0_SPI0_TWI0_IRQn, (uint32_t) SPIM0_SPIS0_TWIM0_TWIS0_SPI0_TWI0_IRQHandler);
        NVIC_SetVector(SPIM1_SPIS1_TWIM1_TWIS1_SPI1_TWI1_IRQn, (uint32_t) SPIM1_SPIS1_TWIM1_TWIS1_SPI1_TWI1_IRQHandler);
        NVIC_SetVector(SPIM2_SPIS2_SPI2_IRQn,                  (uint32_t) SPIM2_SPIS2_SPI2_IRQHandler);
    }
}

void spi_format(spi_t *obj, int bits, int mode, int slave)
{
    /* SPI module only supports 8 bit transfers. */
    MBED_ASSERT(bits == 8);
    /* SPI module doesn't support Mbed HAL Slave API. */
    MBED_ASSERT(slave == 0);

#if DEVICE_SPI_ASYNCH
    struct spi_s *spi_inst = &obj->spi;
#else
    struct spi_s *spi_inst = obj;
#endif

    nrf_drv_spi_mode_t new_mode = NRF_DRV_SPI_MODE_0;

    /* Convert Mbed HAL mode to Nordic mode. */
    if(mode == 0) {
        new_mode = NRF_DRV_SPI_MODE_0;
    } else if(mode == 1) {
        new_mode = NRF_DRV_SPI_MODE_1;
    } else if(mode == 2) {
        new_mode = NRF_DRV_SPI_MODE_2;
    } else if(mode == 3) {
        new_mode = NRF_DRV_SPI_MODE_3;
    }

    /* Check if configuration has changed. */
    if (spi_inst->config.mode != new_mode) {
        spi_inst->config.mode = new_mode;

        /* Set flag to force update. */
        spi_inst->update = true;
    }

    /* Configure peripheral if necessary. Must be called on each format to ensure the pins are set
     * correctly according to the SPI mode.
     */
    spi_configure_driver_instance(obj);
}

void spi_frequency(spi_t *obj, int hz)
{
#if DEVICE_SPI_ASYNCH
    struct spi_s *spi_inst = &obj->spi;
#else
    struct spi_s *spi_inst = obj;
#endif

    nrf_drv_spi_frequency_t new_frequency = NRF_DRV_SPI_FREQ_1M;

    /* Convert frequency to Nordic enum type. */
    if (hz < 250000) {
        new_frequency = NRF_DRV_SPI_FREQ_125K;
    } else if (hz < 500000) {
        new_frequency = NRF_DRV_SPI_FREQ_250K;
    } else if (hz < 1000000) {
        new_frequency = NRF_DRV_SPI_FREQ_500K;
    } else if (hz < 2000000) {
        new_frequency = NRF_DRV_SPI_FREQ_1M;
    } else if (hz < 4000000) {
        new_frequency = NRF_DRV_SPI_FREQ_2M;
    } else if (hz < 8000000) {
        new_frequency = NRF_DRV_SPI_FREQ_4M;
    } else {
        new_frequency = NRF_DRV_SPI_FREQ_8M;
    }

    /* Check if configuration has changed. */
    if (spi_inst->config.frequency != new_frequency) {
        spi_inst->config.frequency = new_frequency;

        /* Set flag to force update. */
        spi_inst->update = true;
    }
}

int spi_master_write(spi_t *obj, int value)
{
#if DEVICE_SPI_ASYNCH
    struct spi_s *spi_inst = &obj->spi;
#else
    struct spi_s *spi_inst = obj;
#endif

    int instance = spi_inst->instance;

    /* Local variables used in transfer. */
    const uint8_t tx_buff = (uint8_t) value;
    uint8_t rx_buff;

    /* Configure peripheral if necessary. */
    spi_configure_driver_instance(obj);

    /* Manually clear chip select pin if defined. */
    if (spi_inst->cs != NC) {
        nrf_gpio_pin_clear(spi_inst->cs);
    }

    /* Transfer 1 byte. */
    nrf_drv_spi_transfer(&nordic_nrf5_spi_instance[instance], &tx_buff, 1, &rx_buff, 1);

    /* Manually set chip select pin if defined. */
    if (spi_inst->cs != NC) {
        nrf_gpio_pin_set(spi_inst->cs);
    }

    return rx_buff;
}

int spi_master_block_write(spi_t *obj, const char *tx_buffer, int tx_length, char *rx_buffer, int rx_length, char write_fill)
{
#if DEVICE_SPI_ASYNCH
    struct spi_s *spi_inst = &obj->spi;
#else
    struct spi_s *spi_inst = obj;
#endif

    int instance = spi_inst->instance;

    /* Check if overflow character has changed. */
    if (spi_inst->config.orc != write_fill) {

        /* Store new overflow character and force reconfiguration. */
        spi_inst->update = true;
        spi_inst->config.orc = write_fill;
    }

    /* Configure peripheral if necessary. */
    spi_configure_driver_instance(obj);

    /* Manually clear chip select pin if defined. */
    if (spi_inst->cs != NC) {
        nrf_gpio_pin_clear(spi_inst->cs);
    }

    /* The Nordic SPI driver is only able to transfer 255 bytes at a time.
     * The following code will write/read the data 255 bytes at a time and
     * ensure that asymmetrical transfers are handled properly.
     */
    int tx_offset = 0;
    int rx_offset = 0;

    ret_code_t result = NRF_SUCCESS;

    /* Loop until all data is sent and received. */
    while (((tx_length > 0) || (rx_length > 0)) && (result == NRF_SUCCESS)) {

        /* Check if tx_length is larger than 255 and if so, limit to 255. */
        int tx_actual_length = (tx_length > 255) ? 255 : tx_length;

        /* Set tx buffer pointer. Set to NULL if no data is going to be transmitted. */
        const uint8_t * tx_actual_buffer = (tx_actual_length > 0) ?
                                           (const uint8_t *)(tx_buffer + tx_offset) :
                                           NULL;

        /* Check if rx_length is larger than 255 and if so, limit to 255. */
        int rx_actual_length = (rx_length > 255) ? 255 : rx_length;

        /* Set rx buffer pointer. Set to NULL if no data is going to be received. */
        uint8_t * rx_actual_buffer = (rx_actual_length > 0) ?
                                     (uint8_t *)(rx_buffer + rx_offset) :
                                     NULL;

        /* Blocking transfer. */
        result = nrf_drv_spi_transfer(&nordic_nrf5_spi_instance[instance],
                                      tx_actual_buffer,
                                      tx_actual_length,
                                      rx_actual_buffer,
                                      rx_actual_length);

        /* Update loop variables. */
        tx_length -= tx_actual_length;
        tx_offset += tx_actual_length;

        rx_length -= rx_actual_length;
        rx_offset += rx_actual_length;
    }

    /* Manually set chip select pin if defined. */
    if (spi_inst->cs != NC) {
        nrf_gpio_pin_set(spi_inst->cs);
    }

    return (rx_offset < tx_offset) ? tx_offset : rx_offset;
}
